--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -6,13 +6,12 @@
     on that page only (the ones not reused in other pages).
 */
 
-
 html {
   margin: 0px;
   padding: 0px;
 }
 .header {
-  background: url(https://www07.abb.com/images/librariesprovider113/default-album/abb_smarter_building.jpg?sfvrsn=776f2108_1)
+  background: url(https://www.fondosdepantalla.top/wp-content/uploads/2017/03/granada-la-alhambra-spain-fondosdepantalla.top-10.jpg)
     center center no-repeat;
   height: 40vh;
   width: 100%;
@@ -45,4 +44,3 @@ html {
 /* .resume {
   background-color: rgb(245, 244, 244);
 } */
-
