--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -10,13 +10,15 @@ html {
   margin: 0px;
   padding: 0px;
 }
+
 .header {
-  background: url(https://www.fondosdepantalla.top/wp-content/uploads/2017/03/granada-la-alhambra-spain-fondosdepantalla.top-10.jpg)
-    center center no-repeat;
-  height: 40vh;
-  width: 100%;
+  background: url(https://kindertravelguide.com/wp-content/uploads/2015/11/home-travel-world-travel-the-world-stock-hd-wallpaper1.jpg);
+  background-repeat: no-repeat;
+  max-width: 100%;
+  height: 600px;
   background-size: cover;
   object-fit: cover;
+  padding: 0 0 0 0;
 }
 
 .titulo {
