--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -12,13 +12,13 @@ html {
 }
 
 .header {
-  background: url(https://kindertravelguide.com/wp-content/uploads/2015/11/home-travel-world-travel-the-world-stock-hd-wallpaper1.jpg);
+  background: url(https://img.freepik.com/free-photo/travel-world-monument-concept_117023-846.jpg?w=2000);
   background-repeat: no-repeat;
   max-width: 100%;
   height: 600px;
   background-size: cover;
   object-fit: cover;
-  padding: 0 0 0 0;
+  padding-bottom: 10%;
 }
 
 .titulo {
