--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,7 +1,6 @@
 .login {
   background-image: url("https://img.static-af.com/images/media/26743379-B7FE-440F-8E524E30B13E20D3/");
   background-repeat: no-repeat;
-  height: auto;
+  height: 100%;
   width: 100%;
-  padding-bottom: 10%;
 }
