--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -15,23 +15,23 @@ html {
   background: url(https://img.freepik.com/free-photo/travel-world-monument-concept_117023-846.jpg?w=2000);
   background-repeat: no-repeat;
   max-width: 100%;
-  height: 600px;
+  height: 750px;
   background-size: cover;
   object-fit: cover;
   padding-bottom: 10%;
 }
 
 .titulo {
-  font-size: 5vh;
-  margin-top: 5%;
+  font-size: 100px;
+  /* margin-top: 5%; */
 }
 
 @media (max-width: 768px) {
   /* Estos estilos solo se aplicarán hasta el tamaño indicado */
 
   .titulo {
-    font-size: 4vh;
-    margin-top: 100px;
+    font-size: 6vh;
+    margin-top: 50px;
   }
 
   /* .header {
