--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -40,6 +40,17 @@ body {
   font-family: "Poiret One", cursive;
   font-size: 20px;
 }
+.infoCard {
+  font-family: "Poiret One", cursive;
+  font-size: 15px;
+}
+
+h3 {
+  font-family: "Staatliches", cursive;
+}
+h4 {
+  font-family: "Staatliches", cursive;
+}
 h5 {
   font-family: "Staatliches", cursive;
 }
