--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -22,7 +22,7 @@ html {
 }
 
 .fondo_protected {
-  background: url(http://3.bp.blogspot.com/-unDSk7V2kiY/UQgeF0pIpjI/AAAAAAAABs4/vr71xsz6wNc/s1600/poder-punto_002.jpg);
+  background: url(https://img.freepik.com/vector-gratis/fondo-abstracto-blanco-estilo-papel-3d_23-2148403778.jpg?w=2000);
   background-repeat: no-repeat;
   max-width: 100%;
   height: 900px;
